# parsing_project

./: LICENSE  README.md  pyproject.toml  setup.py
dailysalesreg/logged/: 05072025.txt  05082025.txt  05092025.txt
json_output/by_date/2025-05-07/: 817859.json  817860.json  817861.json  817862.json  817864.json  817865.json  817866.json  817867.json  817868.json  817869.json  817870.json  817871.json  817872.json  817873.json  817874.json  817875.json  817876.json  817877.json  817878.json  817879.json  817880.json  817881.json  817882.json  817883.json  817884.json  817885.json  817886.json  817887.json  817888.json  817889.json  817890.json  817891.json  817892.json  817893.json  817894.json  817895.json  817896.json  817897.json  817898.json  817899.json  (+445 more)
json_output/by_date/2025-05-08/: 818089.json  818091.json  818092.json  818096.json  818102.json  818103.json  818104.json  818106.json  818107.json  818109.json  818111.json  818112.json  818114.json  818115.json  818116.json  818117.json  818119.json  818120.json  818124.json  818126.json  818127.json  818128.json  818129.json  818131.json  818132.json  818135.json  818140.json  818142.json  818145.json  818146.json  818154.json  818156.json  818158.json  818162.json  818163.json  818165.json  818166.json  818167.json  818169.json  818170.json  (+284 more)
parsing/: config.py  file_ops.py  main.py  utils.py
parsing_project/: file_ops.py  main.py  parser.py
parsing_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
parsing_project/json_output/by_date/2025-05-07/: 817859.json  (+218 more)
(+329 files in other folders)
