[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsing_project"
version = "0.1.1"
description = "Invoice parsing tool for daily sales register exports"
authors = [
    { name="Kyle Allen", email="kyle@levocraft.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pdfplumber",
    "regex"
]

[project.scripts]
parse-invoices = "parsing.main:main"
